1) Added utility classes for generating encryption keys 2) Written logic for generating access token 3) Token removed as a return type from specs and controllers (plan - to switch access token save to HttpOnly) 4) Added mapper for access token DTO from user
